--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: demo:0.0.1-SNAPSHOT
+  IMAGE_NAME: demo0.0.1-SNAPSHOT
 
 jobs:
   build-and-push-image:
