changed image tag

--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -23,8 +23,8 @@ jobs:
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: koszek
+          password: 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
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -38,5 +38,5 @@ jobs:
           context: ./build/libs
           file: Dockerfile
           push: true
-          tags: ed1489/demo:first
+          tags: koszek/demo:first
           labels: label
