--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -18,7 +18,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - run: ${{ github.workspace }}/gradlew publish
+      - name: Publish artifact
+        env:
+          PACKAGES_PASSWORD: ${{ secrets.PACKAGES_PASSWORD }}
+        run: ${{ github.workspace }}/gradlew publish
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
