--- a/.github/workflows/push-docker-image.yml
+++ b/.github/workflows/push-docker-image.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+      - run: ${{ github.workspace }}/gradlew build
       - name: Publish artifact
         env:
           PACKAGES_PASSWORD: ${{ secrets.PACKAGES_PASSWORD }}
