--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,4 +1,4 @@
-name: Gradle Package
+name: Gradle Publish
 
 on:
   workflow_dispatch:
@@ -33,5 +33,6 @@ jobs:
       with:
         arguments: publish
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         USERNAME: ${{ github.actor }}
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
