--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ plugins {
     id 'maven-publish'
 }
 
-group = 'com.example'
-version = '0.0.6-SNAPSHOT'
+group = 'com.example1'
+version = '1.0.6-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
