--- a/build.gradle
+++ b/build.gradle
@@ -27,15 +27,15 @@ publishing {
         }
     }
 
-//    publications {
-//        maven(MavenPublication) {
+    publications {
+        maven(MavenPublication) {
 //            groupId = project.group
 //            artifactId = 'github-demo'
 //            version = '0.0.5-SNAPSHOT'
 //
 //            from components.java
-//        }
-//    }
+        }
+    }
 }   
 
 dependencies {
